crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__quantifiers_optional_nongreedy.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (function_declaration (decorator)?? @dec)
---
[strings]
S0 "Beauty will save the world"
S1 "dec"
S2 "Test"
S3 "function_declaration"
S4 "decorator"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { dec }
T2 = Optional(T0)  ; <Node>?

[type_members]
M0: S1 → T2  ; dec: T2

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (function_declaration)           09, 18
  08                                        ▶
  09  -ε-  [Null Set(M0)]                   08
  11   !   (decorator) [Node Set(M0)]       15
  13  -ε-  [Null Set(M0)]                   15
  15  ─‣┘  _                                08
  16  ─‣─  _                                13, 16, 11
  18  └‣─  _                                13, 16, 11
