crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__quantifiers_plus_nongreedy.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (identifier)+? @items
---
[strings]
S0 "Beauty will save the world"
S1 "items"
S2 "Test"
S3 "identifier"

[type_defs]
T0 = <Node>
T1 = ArrayPlus(T0)  ; <Node>+
T2 = Struct  M0:1  ; { items }

[type_members]
M0: S1 → T1  ; items: T1

[type_names]
N0: S2 → T2  ; Test

[entrypoints]
Test = 06 :: T2

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   [Arr] _                          13, 11
  08                                        ▶
  09  -ε-  [EndArr Set(M0)]                 08
  11   !   (identifier) [Node Push]         09, 18
  13  ─‣─  _                                13, 11
  15  ...  
  16  ─‣─  _                                09, 16, 11
  18  ─‣─  _                                09, 16, 11
