crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__quantifiers_repeat_navigation.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (function_declaration (decorator)* @decs)
---
[strings]
S0 "Beauty will save the world"
S1 "decs"
S2 "Test"
S3 "function_declaration"
S4 "decorator"

[type_defs]
T0 = <Node>
T1 = ArrayStar(T0)  ; <Node>*
T2 = Struct  M0:1  ; { decs }

[type_members]
M0: S1 → T1  ; decs: T1

[type_names]
N0: S2 → T2  ; Test

[entrypoints]
Test = 06 :: T2

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (function_declaration)           08
  07  ...  
  08  -ε-  [Arr]                            18, 11
  10                                        ▶
  11  -ε-  [EndArr Set(M0)]                 10
  13   !   (decorator) [Node Push]          22, 24
  15  ...  
  16  ─‣─  _                                13, 16
  18  └‣─  _                                13, 16
  20  ─‣─  _                                13, 20
  22  ─‣─  _                                13, 20
  24  ─‣┘  [EndArr Set(M0)] _               10
