crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__quantifiers_struct_array.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (array {(identifier) @a (number) @b}* @items)
---
[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "items"
S4 "Test"
S5 "array"
S6 "identifier"
S7 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { a, b }
T2 = ArrayStar(T1)  ; T1*
T3 = Struct  M2:1  ; { items }
T4 = Struct  M3:1  ; { a }
T5 = Struct  M4:1  ; { b }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>
M2: S3 → T2  ; items: T2
M3: S1 → T0  ; a: <Node>
M4: S2 → T0  ; b: <Node>

[type_names]
N0: S4 → T3  ; Test

[entrypoints]
Test = 06 :: T3

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (array)                          08
  07  ...  
  08  -ε-  [Arr]                            24, 14
  10  -ε-                                   11
  11  ─‣┘  [EndArr Set(M2)] _               13
  13                                        ▶
  14  -ε-  [EndArr Set(M2)]                 13
  16  -ε-  [EndObj Push]                    28, 10
  18  ─‣─  (number) [Node Set(M1)]          16
  20   !   [Obj] (identifier) [Node Set(M0)]  18
  22  ─‣─  _                                20, 22
  24  └‣─  _                                20, 22
  26  ─‣─  _                                20, 26
  28  ─‣─  _                                20, 26
