crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__sequences_basic.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (array {(identifier) (number)})
---
[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "array"
S3 "identifier"
S4 "number"

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 06 :: T0

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (array)                          07
  07  └‣─  (identifier)                     08
  08  ─‣─  (number)                         09
  09  ─‣┘  _                                10
  10                                        ▶
